# django-request-profiler

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG  CONTRIBUTING  CONTRIBUTING.md  LICENSE  Pipfile  README.rst  README_kr.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_db  tox.ini
.github/workflows/: tox.yml
django_request_profiler/: admin.py  middleware.py  models.py  readme.md
request_profiler/: __init__.py  admin.py  apps.py  compat.py  middleware.py  models.py  settings.py  signals.py  tests.py
request_profiler/management/commands/: truncate_request_profiler_logs.py
request_profiler/migrations/: 0001_initial.py  0002_profilingrecord_http_referer.py  0003_profilingrecord_query_string.py  0004_profilingrecord_query_count.py  0005_alter_profilingrecord_id_alter_ruleset_id.py  __init__.py
request_profiler/south_migrations/: 0002_auto__del_field_ruleset_include_anonymous__add_field_ruleset_user_filt.py  0003_auto__add_field_profilingrecord_response_content_length.py  0004_auto__add_field_profilingrecord_http_referer.py  __init__.py
test_app/: __init__.py  functions.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
test_app/templates/: test.html
tests/: models.py  settings.py  test_middleware.py  test_models.py  test_views.py  urls.py  utils.py
tests/templates/: test.html
