[tool.poetry]
name = "django-request-profiler"
version = "1.1"
description = "A simple Django project profiler for timing HTTP requests."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yunojuno/django-request-profiler"
repository = "https://github.com/yunojuno/django-request-profiler"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "request_profiler" }
]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2 || ^4.0 || ^5.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
